objects/obj800__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>obj800</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>obj800 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>obj800s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>